Added Digital Twin and Metaverse conferences

--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+---
+layout: default
+title: Home
+---
+
 <!-- Hero Section -->
 <section
   class="jumbotron text-center"
@@ -219,20 +224,6 @@
   </div>
 </section>
 
-<!-- <section
-  class="page-section container-fluid px-5 py-5 d-flex flex-column gap-4"
->
-  <div class="row g-2">
-    <div
-      class="col-sm-12 d-flex flex-column gap-3 justify-content-around pt-2 pb-2"
-    >
-      <h2 class="text-center">Co-Located Conferences</h2>
-      <h3 class="text-center">Coming soon</h3>
-    </div>
-    <div class="col-sm-12"></div>
-  </div>
-</section> -->
-
 <section class="container-fluid d-flex flex-column gap-4 bg-light">
   <div class="page-section w-100 px-5 py-5">
     <h2 class="text-center mb-5">Venue</h2>
@@ -247,7 +238,7 @@
           budget options. This proximity ensures that conference attendees have
           a range of accommodation choices within walking distance.
         </p>
-        <a href="/telus-convention-center" class="btn btn-primary w-100"
+        <a href="/venue/telus-convention-center" class="btn btn-primary w-100"
           >Learn More</a
         >
       </div>
@@ -276,7 +267,7 @@
           heritage, and offers stunning natural beauty, with easy access to the
           nearby Banff and Jasper national parks.
         </p>
-        <a href="/calgary" class="btn btn-primary w-100">Learn More</a>
+        <a href="/venue" class="btn btn-primary w-100">Learn More</a>
       </div>
       <div
         class="col-sm-6 py-2 d-flex justify-content-center align-items-end"
@@ -286,6 +277,83 @@
           src="/assets/images/sri-gowda-pdIe9hAcaP4-unsplash.jpg"
           class="w-100 img-fluid"
         />
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="container-fluid d-flex flex-column gap-4">
+  <div class="page-section w-100 px-5 py-5 d-flex flex-column gap-4">
+    <h2 class="text-center">IEEE SWC 2025 Colocated Conferences</h2>
+    <div class="row pb-3 g-4 justify-content-center">
+      <div class="col-sm-4">
+        <div class="card bg-light-subtle">
+          <div class="card-body d-flex flex-column gap-4">
+            <h3 class="text-center">IEEE Digital Twin 2025</h3>
+            <h5 class="fs-6 text-center">
+              The 2025 IEEE Digital Twin Conference
+            </h5>
+            <a href="/digitaltwin" class="btn btn-primary w-100">View</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="card bg-light-subtle">
+          <div class="card-body d-flex flex-column gap-4">
+            <h3 class="text-center">IEEE MVS 2025</h3>
+            <h5 class="fs-6 text-center">
+              The IEEE International Conference on Metaverse 2025
+            </h5>
+            <a href="/metaverse" class="btn btn-primary w-100">View</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="card bg-light-subtle">
+          <div class="card-body d-flex flex-column gap-4">
+            <h3 class="text-center">IEEE UIC 2025</h3>
+            <h5 class="fs-6 text-center">
+              The 22th IEEE International Conference on Ubiquitous Intelligence
+              and Computing
+            </h5>
+            <a href="#" class="btn btn-primary disabled w-100">Coming Soon</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="card bg-light-subtle">
+          <div class="card-body d-flex flex-column gap-4">
+            <h3 class="text-center">IEEE ATC 2025</h3>
+            <h5 class="fs-6 text-center">
+              The 22th IEEE Autonomous and Trusted Vehicle Conference
+            </h5>
+            <a href="#" class="btn btn-primary disabled w-100">Coming Soon</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="card bg-light-subtle">
+          <div class="card-body d-flex flex-column gap-4">
+            <h3 class="text-center">IEEE ScalCom 2025</h3>
+            <h5 class="fs-6 text-center">
+              The 25rd IEEE International Conference on Scalable Computing and
+              Communications
+            </h5>
+            <a href="#" class="btn btn-primary disabled w-100">Coming Soon</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="card bg-light-subtle">
+          <div class="card-body d-flex flex-column gap-4">
+            <h3 class="text-center">IEEE PCDS 2025</h3>
+            <h5 class="fs-6 text-center">
+              The 11th IEEE International Conference on Privacy Computing and
+              Data Security
+            </h5>
+            <a href="#" class="btn btn-primary disabled w-100">Coming Soon</a>
+          </div>
+        </div>
       </div>
     </div>
   </div>
