--- a/venue/telus-convention-center/index.html
+++ b/venue/telus-convention-center/index.html
@@ -1,3 +1,8 @@
+---
+layout: default
+title: Venue - Telus Convention Center
+---
+
 <!-- Hero Section -->
 <section
   class="jumbotron text-center"
