--- a/index.html
+++ b/index.html
@@ -311,6 +311,18 @@ title: Home
       <div class="col-sm-4">
         <div class="card bg-light-subtle">
           <div class="card-body d-flex flex-column gap-4">
+            <h3 class="text-center">IEEE ScalCom 2025</h3>
+            <h5 class="fs-6 text-center">
+              The 25rd IEEE International Conference on Scalable Computing and
+              Communications
+            </h5>
+            <a href="/scalcom" class="btn btn-primary w-100">View</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="card bg-light-subtle">
+          <div class="card-body d-flex flex-column gap-4">
             <h3 class="text-center">IEEE UIC 2025</h3>
             <h5 class="fs-6 text-center">
               The 22th IEEE International Conference on Ubiquitous Intelligence
@@ -326,18 +338,6 @@ title: Home
             <h3 class="text-center">IEEE ATC 2025</h3>
             <h5 class="fs-6 text-center">
               The 22th IEEE Autonomous and Trusted Vehicle Conference
-            </h5>
-            <a href="#" class="btn btn-primary disabled w-100">Coming Soon</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card bg-light-subtle">
-          <div class="card-body d-flex flex-column gap-4">
-            <h3 class="text-center">IEEE ScalCom 2025</h3>
-            <h5 class="fs-6 text-center">
-              The 25rd IEEE International Conference on Scalable Computing and
-              Communications
             </h5>
             <a href="#" class="btn btn-primary disabled w-100">Coming Soon</a>
           </div>
