--- a/metaverse/index.html
+++ b/metaverse/index.html
@@ -19,7 +19,7 @@ title: IEEE International Conference on Metaverse 2025
     <div
       class="page-section container px-5 pt-5 d-flex flex-column align-items-center gap-3"
     >
-      <h1 class="display-3 fw-bolder mt-5">
+      <h1 class="display-5 fw-bolder mt-5">
         IEEE International Conference on Metaverse 2025
       </h1>
       <!-- <h3 class="w-75 responsive-width fw-medium text-center">
@@ -170,7 +170,7 @@ title: IEEE International Conference on Metaverse 2025
     </div>
     <div class="col-sm-8 d-flex flex-column gap-4">
       <div>
-        <h2 class="mb-2">Join us at the 2025 IEEE Metaverse Conference</h2>
+        <h2 class="fs-2 mb-2">Join us at the 2025 IEEE Metaverse Conference</h2>
         <p class="fs-5">
           The metaverse, a concept that originated in Neal Stephenson's 1992
           science fiction novel "Snow Crash," has evolved from a futuristic idea
@@ -204,7 +204,7 @@ title: IEEE International Conference on Metaverse 2025
       </div>
       <div class="row">
         <div class="col-12 mb-3 mb-sm-0 d-flex flex-column gap-4">
-          <h2 class="">IEEE Metaverse 2025 Topics</h2>
+          <h2 class="fs-2">IEEE Metaverse 2025 Topics</h2>
           <div class="row pb-3 g-4">
             <div class="col-sm-6 mb-3 mb-sm-0">
               <div class="card">
@@ -312,7 +312,7 @@ title: IEEE International Conference on Metaverse 2025
 
 <section class="container-fluid d-flex flex-column gap-4 bg-light">
   <div class="page-section w-100 px-5 py-5 d-flex flex-column gap-4">
-    <h2 class="text-center">IEEE SWC 2025 Colocated Conferences</h2>
+    <h2 class="fs-2 text-center">IEEE SWC 2025 Colocated Conferences</h2>
     <div class="row pb-3 g-4 justify-content-center">
       <div class="col-sm-4">
         <div class="card bg-light-subtle">
@@ -322,6 +322,18 @@ title: IEEE International Conference on Metaverse 2025
               The 2025 IEEE Digital Twin Conference
             </h5>
             <a href="/digitaltwin" class="btn btn-primary w-100">View</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="card bg-light-subtle">
+          <div class="card-body d-flex flex-column gap-4">
+            <h3 class="text-center">IEEE ScalCom 2025</h3>
+            <h5 class="fs-6 text-center">
+              The 25rd IEEE International Conference on Scalable Computing and
+              Communications
+            </h5>
+            <a href="/scalcom" class="btn btn-primary w-100">View</a>
           </div>
         </div>
       </div>
@@ -351,18 +363,6 @@ title: IEEE International Conference on Metaverse 2025
       <div class="col-sm-4">
         <div class="card bg-light-subtle">
           <div class="card-body d-flex flex-column gap-4">
-            <h3 class="text-center">IEEE ScalCom 2025</h3>
-            <h5 class="fs-6 text-center">
-              The 25rd IEEE International Conference on Scalable Computing and
-              Communications
-            </h5>
-            <a href="#" class="btn btn-primary disabled w-100">Coming Soon</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card bg-light-subtle">
-          <div class="card-body d-flex flex-column gap-4">
             <h3 class="text-center">IEEE PCDS 2025</h3>
             <h5 class="fs-6 text-center">
               The 11th IEEE International Conference on Privacy Computing and
@@ -379,7 +379,7 @@ title: IEEE International Conference on Metaverse 2025
 <section
   class="page-section container-fluid px-5 py-5 d-flex flex-column gap-4"
 >
-  <h2 class="text-center">Sponsors</h2>
+  <h2 class="fs-2 text-center">Sponsors</h2>
   <div class="row justify-content-around gap-3 pb-5">
     <div
       class="col-12 col-md-auto d-flex justify-content-center"
@@ -394,7 +394,7 @@ title: IEEE International Conference on Metaverse 2025
       <img src="/assets/images/IEEE-CS_LogoTM-orange.png" class="mh-100" />
     </div>
   </div>
-  <h2 class="text-center">Supporters</h2>
+  <h2 class="fs-2 text-center">Supporters</h2>
   <div class="row justify-content-around gap-3 pb-5">
     <div
     class="col-12 col-md-auto d-flex justify-content-center"
