Work on committee members

--- a/metaverse/index.html
+++ b/metaverse/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: IEEE International Conference on Metaverse 2025
+title: IEEE MVS 2025
 ---
 
 <!-- Hero Section -->
@@ -112,6 +112,15 @@ title: IEEE International Conference on Metaverse 2025
               </h5>
               <h5 class="fs-6">
                 Francesco Pupo, The University of Calabria, Italy
+              </h5>
+            </div>
+          </div>
+          <hr class="w-100" />
+          <div class="d-flex gap-1 flex-column">
+            <h5 class="fs-6 fw-bold">Publicity Chair</h5>
+            <div class="d-flex flex-column">
+              <h5 class="fs-6">
+                Kangsoo Kim , University of Calgary, Canada
               </h5>
             </div>
           </div>
