--- a/digitaltwin/index.html
+++ b/digitaltwin/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: IEEE Digital Twin Conference 2025
+title: IEEE Digital Twin 2025
 ---
 
 <!-- Hero Section -->
@@ -158,7 +158,9 @@ title: IEEE Digital Twin Conference 2025
     </div>
     <div class="col-sm-8 d-flex flex-column gap-4">
       <div>
-        <h2 class="fs-2 mb-2">Join us at the 2025 IEEE Digital Twins Conference</h2>
+        <h2 class="fs-2 mb-2">
+          Join us at the 2025 IEEE Digital Twin Conference
+        </h2>
         <p class="fs-5">
           Digital twin, as a recent iconic phrases of fashions, has been coined
           and broadened somewhat in that it is now being extensively applied, or
