--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ title: Home
 >
   <div class="row">
     <div class="col-sm-8 mb-3 mb-sm-0 d-flex flex-column gap-4">
-      <h2 class="mb-2">Join us at IEEE Smart World Congress 2025</h2>
+      <h2 class="fs-2 mb-2">Join us at IEEE Smart World Congress 2025</h2>
       <p class="fs-5">
         We are thrilled to invite you to the IEEE Smart World Congress 2025, a
         premier event bringing together thought leaders and researchers in smart
@@ -56,40 +56,9 @@ title: Home
         trustworthy smart world technologies continues to expand, addressing
         societal challenges and fostering meaningful impacts. Join us at IEEE
         SWC 2025 to shape the future of smart technologies together!<br /><br />We
-        look forward to seeing you in Calgary!<br />Sincerely,
+        look forward to seeing you in Calgary!<br />Sincerely, The 2025 IEEE SWC
+        Organizing Committee
       </p>
-      <div class="row text-center">
-        <div class="col-md-4">
-          <img
-            src="/assets/images/HenryLeung.jpg"
-            alt="Dr. Henry Leung"
-            class="circle-img mb-3"
-          />
-          <h5>Dr. Henry Leung</h5>
-          <h6><i>University of Calgary</i></h6>
-          <p>General Chair IEEE SWC 2025</p>
-        </div>
-        <div class="col-md-4">
-          <img
-            src="/assets/images/Oscar_Lin.jpg"
-            alt="Dr. Oscar Lin"
-            class="circle-img mb-3"
-          />
-          <h5>Dr. Oscar Lin</h5>
-          <h6><i>Athabasca University</i></h6>
-          <p>Co-General Chair IEEE SWC 2025</p>
-        </div>
-        <div class="col-md-4">
-          <img
-            src="/assets/images/Reza_Malekian.jpg"
-            alt="Dr. Oscar Lin"
-            class="circle-img mb-3"
-          />
-          <h5>Dr. Reza Malekian</h5>
-          <h6><i>Malmö University</i></h6>
-          <p>Program Chair IEEE SWC 2025</p>
-        </div>
-      </div>
     </div>
     <div class="col-sm-4 mb-3 mb-sm-0">
       <div class="card bg-light-subtle">
@@ -128,11 +97,72 @@ title: Home
   </div>
 </section>
 
+<section
+  class="page-section container-fluid px-5 pt-5 pb-5 mt-2 d-flex flex-column gap-4"
+>
+  <div class="row text-center">
+    <div class="col-12"><h2 class="fs-2 mb-2">Organizing Committee</h2></div>
+  </div>
+
+  <div class="row text-center justify-content-center g-4">
+    <div class="col-md-4">
+      <img
+        src="/assets/images/HenryLeung.jpg"
+        alt="Dr. Henry Leung"
+        class="circle-img mb-3"
+      />
+      <h5>Dr. Henry Leung</h5>
+      <h6><i>University of Calgary, Canada</i></h6>
+      <p>General Chair</p>
+    </div>
+    <div class="col-md-4">
+      <img
+        src="/assets/images/Oscar_Lin.jpg"
+        alt="Dr. Oscar Lin"
+        class="circle-img mb-3"
+      />
+      <h5>Dr. Oscar Lin</h5>
+      <h6><i>Athabasca University, Canada</i></h6>
+      <p>Co-General Chair</p>
+    </div>
+    <div class="col-md-4">
+      <img
+        src="/assets/images/Reza_Malekian.jpg"
+        alt="Dr. Oscar Lin"
+        class="circle-img mb-3"
+      />
+      <h5>Dr. Reza Malekian</h5>
+      <h6><i>Malmö University, Sweden</i></h6>
+      <p>Program Chair</p>
+    </div>
+    <div class="col-md-4">
+      <img
+        src="/assets/images/steve-drew-small.jpg"
+        alt="Dr. Steve Drew"
+        class="circle-img mb-3"
+      />
+      <h5>Dr. Steve Drew</h5>
+      <h6><i>University of Calgary, Canada</i></h6>
+      <p>Financial Chair</p>
+    </div>
+    <div class="col-md-4">
+      <img
+        src="/assets/images/Xueqin Liang.JPG"
+        alt="Dr. Oscar Lin"
+        class="circle-img mb-3"
+      />
+      <h5>Dr. Xueqin Liang</h5>
+      <h6><i>Xidian University, China</i></h6>
+      <p>Publication Chair</p>
+    </div>
+  </div>
+</section>
+
 <section class="container-fluid d-flex flex-column gap-4 bg-light">
   <div class="page-section w-100 px-5 py-5 d-flex flex-column gap-4">
     <div class="row">
       <div class="col-12 mb-3 mb-sm-0 d-flex flex-column gap-4 text-center">
-        <h2 class="text-center">Topics Covered</h2>
+        <h2 class="fs-2 text-center">Topics Covered</h2>
         <div class="row">
           <div class="col-sm-6">
             <ul class="row list-unstyled">
@@ -174,7 +204,7 @@ title: Home
 
 <section class="container-fluid d-flex flex-column gap-4">
   <div class="page-section w-100 px-5 py-5 d-flex flex-column gap-4">
-    <h2 class="text-center">Previous IEEE Smart World Congress</h2>
+    <h2 class="fs-2 text-center">Previous IEEE Smart World Congress</h2>
     <div class="row pb-3">
       <div class="col-sm-4 mb-3 mb-sm-0">
         <div class="card bg-light-subtle">
@@ -226,7 +256,7 @@ title: Home
 
 <section class="container-fluid d-flex flex-column gap-4 bg-light">
   <div class="page-section w-100 px-5 py-5">
-    <h2 class="text-center mb-5">Venue</h2>
+    <h2 class="fs-2 text-center mb-5">Venue</h2>
     <div class="row mb-5">
       <div
         class="col-sm-6 d-flex flex-column gap-3 justify-content-around py-2"
@@ -284,7 +314,7 @@ title: Home
 
 <section class="container-fluid d-flex flex-column gap-4">
   <div class="page-section w-100 px-5 py-5 d-flex flex-column gap-4">
-    <h2 class="text-center">IEEE SWC 2025 Colocated Conferences</h2>
+    <h2 class="fs-2 text-center">IEEE SWC 2025 Colocated Conferences</h2>
     <div class="row pb-3 g-4 justify-content-center">
       <div class="col-sm-4">
         <div class="card bg-light-subtle">
@@ -362,7 +392,7 @@ title: Home
 <section
   class="page-section container-fluid px-5 py-5 d-flex flex-column gap-4"
 >
-  <h2 class="text-center">Sponsors</h2>
+  <h2 class="fs-2 text-center">Sponsors</h2>
   <div class="row justify-content-around gap-3 pb-5">
     <div
       class="col-12 col-md-auto d-flex justify-content-center"
