--- a/scalcom/index.html
+++ b/scalcom/index.html
@@ -1,15 +1,15 @@
 ---
 layout: default
-title: IEEE International Conference on Metaverse 2025
+title: IEEE ScalCom 2025
 ---
 
 <!-- Hero Section -->
 <section
   class="jumbotron text-center"
   style="
-    background-image: url('/assets/images/Metaverse_Calgary.jpg');
+    background-image: url('/assets/images/daven-froberg-pQqqbdwg6n4-unsplash.jpg');
     background-size: cover;
-    background-position: center;
+    background-position: center 65%;
     height: 60vh;
     position: relative;
     color: white;
