Added Hongxin photo to organizing committee

--- a/index.html
+++ b/index.html
@@ -146,6 +146,16 @@ title: Home
       <p>Financial Chair</p>
     </div>
     <div class="col-md-4">
+        <img
+          src="/assets/images/hongxin.JPG"
+          alt="Dr. Steve Drew"
+          class="circle-img mb-3"
+        />
+        <h5>Hongxin Yan</h5>
+        <h6><i>Athabasca University, Canada</i></h6>
+        <p>Financial Chair</p>
+      </div>
+    <div class="col-md-4">
       <img
         src="/assets/images/Xueqin Liang.JPG"
         alt="Dr. Oscar Lin"
