--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@ title: Home
           <div class="card-body d-flex flex-column gap-4">
             <h3 class="text-center">IEEE ScalCom 2025</h3>
             <h5 class="fs-6 text-center">
-              The 25rd IEEE International Conference on Scalable Computing and
+              The 25th IEEE International Conference on Scalable Computing and
               Communications
             </h5>
             <a href="/scalcom" class="btn btn-primary w-100">View</a>
@@ -365,7 +365,7 @@ title: Home
           <div class="card-body d-flex flex-column gap-4">
             <h3 class="text-center">IEEE UIC 2025</h3>
             <h5 class="fs-6 text-center">
-              The 22th IEEE International Conference on Ubiquitous Intelligence
+              The 22nd IEEE International Conference on Ubiquitous Intelligence
               and Computing
             </h5>
             <a href="#" class="btn btn-primary disabled w-100">Coming Soon</a>
@@ -377,7 +377,7 @@ title: Home
           <div class="card-body d-flex flex-column gap-4">
             <h3 class="text-center">IEEE ATC 2025</h3>
             <h5 class="fs-6 text-center">
-              The 22th IEEE Autonomous and Trusted Vehicle Conference
+              The 22nd IEEE Autonomous and Trusted Vehicle Conference
             </h5>
             <a href="#" class="btn btn-primary disabled w-100">Coming Soon</a>
           </div>
