--- a/scalcom/index.html
+++ b/scalcom/index.html
@@ -336,7 +336,7 @@ title: IEEE ScalCom 2025
           <div class="card-body d-flex flex-column gap-4">
             <h3 class="text-center">IEEE UIC 2025</h3>
             <h5 class="fs-6 text-center">
-              The 22th IEEE International Conference on Ubiquitous Intelligence
+              The 22nd IEEE International Conference on Ubiquitous Intelligence
               and Computing
             </h5>
             <a href="#" class="btn btn-primary disabled w-100">Coming Soon</a>
@@ -348,7 +348,7 @@ title: IEEE ScalCom 2025
           <div class="card-body d-flex flex-column gap-4">
             <h3 class="text-center">IEEE ATC 2025</h3>
             <h5 class="fs-6 text-center">
-              The 22th IEEE Autonomous and Trusted Vehicle Conference
+              The 22nd IEEE Autonomous and Trusted Vehicle Conference
             </h5>
             <a href="#" class="btn btn-primary disabled w-100">Coming Soon</a>
           </div>
