Added UIC conference

--- a/metaverse/index.html
+++ b/metaverse/index.html
@@ -354,7 +354,7 @@ title: IEEE MVS 2025
               The 22nd IEEE International Conference on Ubiquitous Intelligence
               and Computing
             </h5>
-            <a href="#" class="btn btn-primary disabled w-100">Coming Soon</a>
+            <a href="/uic" class="btn btn-primary w-100">View</a>
           </div>
         </div>
       </div>
