--- a/digitaltwin/index.html
+++ b/digitaltwin/index.html
@@ -318,7 +318,7 @@ title: IEEE Digital Twin 2025
               The 22nd IEEE International Conference on Ubiquitous Intelligence
               and Computing
             </h5>
-            <a href="#" class="btn btn-primary disabled w-100">Coming Soon</a>
+            <a href="/uic" class="btn btn-primary w-100">View</a>
           </div>
         </div>
       </div>
