--- a/index.html
+++ b/index.html
@@ -146,15 +146,15 @@ title: Home
       <p>Financial Chair</p>
     </div>
     <div class="col-md-4">
-        <img
-          src="/assets/images/hongxin.JPG"
-          alt="Dr. Steve Drew"
-          class="circle-img mb-3"
-        />
-        <h5>Hongxin Yan</h5>
-        <h6><i>Athabasca University, Canada</i></h6>
-        <p>Financial Chair</p>
-      </div>
+      <img
+        src="/assets/images/hongxin.JPG"
+        alt="Dr. Steve Drew"
+        class="circle-img mb-3"
+      />
+      <h5>Hongxin Yan</h5>
+      <h6><i>Athabasca University, Canada</i></h6>
+      <p>Financial Chair</p>
+    </div>
     <div class="col-md-4">
       <img
         src="/assets/images/Xueqin Liang.JPG"
@@ -368,7 +368,7 @@ title: Home
               The 22nd IEEE International Conference on Ubiquitous Intelligence
               and Computing
             </h5>
-            <a href="#" class="btn btn-primary disabled w-100">Coming Soon</a>
+            <a href="/uic" class="btn btn-primary w-100">View</a>
           </div>
         </div>
       </div>
