--- a/uic/index.html
+++ b/uic/index.html
@@ -360,37 +360,40 @@ title: IEEE UIC 2025
   <h2 class="fs-2 text-center">Sponsors</h2>
   <div class="row justify-content-around gap-3 pb-5">
     <div
-      class="col-12 col-md-auto d-flex justify-content-center"
+      class="col-12 col-md-3 d-flex justify-content-center"
       style="height: 50px"
     >
       <img src="/assets/images/ieee mb black png.png" class="mh-100" />
     </div>
     <div
-      class="col-12 col-md-auto d-flex justify-content-center"
+      class="col-12 col-md-3 d-flex justify-content-center"
+      style="height: 50px"
+    >
+      <img src="/assets/images/cis-logo.png" class="mh-100" />
+    </div>
+    <div
+      class="col-12 col-md-3 d-flex justify-content-center"
       style="height: 50px"
     >
       <img src="/assets/images/IEEE-CS_LogoTM-orange.png" class="mh-100" />
     </div>
-  </div>
-  <h2 class="fs-2 text-center">Supporters</h2>
-  <div class="row justify-content-around gap-3 pb-5">
     <div
-      class="col-12 col-md-auto d-flex justify-content-center"
+      class="col-12 col-md-3 d-flex justify-content-center"
       style="height: 50px"
     >
       <img src="/assets/images/tcsc_ieee.png" class="mh-100" />
     </div>
     <div
-      class="col-12 col-md-auto d-flex justify-content-center"
+      class="col-12 col-md-3 d-flex justify-content-center"
       style="height: 50px"
     >
-      <img src="/assets/images/ieee_cybermatics.png" class="mh-100" />
+      <img src="/assets/images/IEEE_HI_TC.jpg" class="mh-100" />
     </div>
     <div
-      class="col-12 col-md-auto d-flex justify-content-center"
+      class="col-12 col-md-3 d-flex justify-content-center"
       style="height: 50px"
     >
-      <img src="/assets/images/SWTC2.png" class="mh-100" />
+      <img src="/assets/images/ieee_cpss.png" class="mh-100" />
     </div>
   </div>
 </section>
