--- a/uic/index.html
+++ b/uic/index.html
@@ -70,6 +70,9 @@ title: IEEE UIC 2025
               <h5 class="fs-6">
                 Bin Hu, Beijing Institute of Technology, China
               </h5>
+              <h5 class="fs-6">
+                H. Herbert Song, University of Maryland, USA
+              </h5>
             </div>
           </div>
           <hr class="w-100" />
