Added images to Metaverse conference

--- a/metaverse/index.html
+++ b/metaverse/index.html
@@ -113,15 +113,17 @@ title: IEEE MVS 2025
               <h5 class="fs-6">
                 Francesco Pupo, The University of Calabria, Italy
               </h5>
+              <h5 class="fs-6">Walaa Saber Ismail, Liwa College, UAE</h5>
+              <h5 class="fs-6">
+                Suha Khalil Assayed, British University in Dubai, UAE
+              </h5>
             </div>
           </div>
           <hr class="w-100" />
           <div class="d-flex gap-1 flex-column">
             <h5 class="fs-6 fw-bold">Publicity Chair</h5>
             <div class="d-flex flex-column">
-              <h5 class="fs-6">
-                Kangsoo Kim , University of Calgary, Canada
-              </h5>
+              <h5 class="fs-6">Kangsoo Kim , University of Calgary, Canada</h5>
             </div>
           </div>
           <hr class="w-100" />
@@ -150,18 +152,30 @@ title: IEEE MVS 2025
               <h5 class="fs-6">Georg Borges, Saarland University, Germany</h5>
               <h5 class="fs-6">Ray Al-Barazie, Liwa College, Al Ain UAE</h5>
               <h5 class="fs-6">Imen Zalila, Liwa College, Abu Dhabi UAE</h5>
-              <h5 class="fs-6">Said Salloum, Salford University, Manchester UK</h5>
+              <h5 class="fs-6">
+                Said Salloum, Salford University, Manchester UK
+              </h5>
               <h5 class="fs-6">Ashgan Ahmed, Liwa College, Al Ain UAE</h5>
               <h5 class="fs-6">Xiaohua Feng, University of Bedfordshire, UK</h5>
-              <h5 class="fs-6">Scott Adams, Deakin University, Australia </h5>
+              <h5 class="fs-6">Scott Adams, Deakin University, Australia</h5>
               <h5 class="fs-6">Oscar Lin, Athabasca University, Canada</h5>
-              <h5 class="fs-6">Hui Yu, University of Glasgow, UK  </h5>
-              <h5 class="fs-6">Jesus Matinez del Rincon, Queen’s Univ. Belfast, UK</h5>
-              <h5 class="fs-6">Doowon Jeong, Sung Kyun Kwan University, Korea </h5>
-              <h5 class="fs-6">Jiawen Kang, Guangdong Univ. of Technology, China</h5>
-              <h5 class="fs-6">Junhui Hou, City University of Hong Kong, China </h5>
-              <h5 class="fs-6"></h5>Francesco Pupo, The University of Calabria, Italy</h5>
-              <h5 class="fs-6"></h5>Mohammed Ghazal, Abu Dhabi University, UAE</h5>
+              <h5 class="fs-6">Hui Yu, University of Glasgow, UK</h5>
+              <h5 class="fs-6">
+                Jesus Matinez del Rincon, Queen’s Univ. Belfast, UK
+              </h5>
+              <h5 class="fs-6">
+                Doowon Jeong, Sung Kyun Kwan University, Korea
+              </h5>
+              <h5 class="fs-6">
+                Jiawen Kang, Guangdong Univ. of Technology, China
+              </h5>
+              <h5 class="fs-6">
+                Junhui Hou, City University of Hong Kong, China
+              </h5>
+              <h5 class="fs-6">
+                Francesco Pupo, The University of Calabria, Italy
+              </h5>
+              <h5 class="fs-6">Mohammed Ghazal, Abu Dhabi University, UAE</h5>
             </div>
           </div>
           <hr class="w-100" />
@@ -169,8 +183,10 @@ title: IEEE MVS 2025
             <h5 class="fs-6 fw-bold">Steering Committee</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">Jianhua Ma (Chair), Hosei University, Japan</h5>
-              <h5 class="fs-6">Laurence Yang (Chair), St. Francis Xavier Univ., Canada</h5>
-              <h5 class="fs-6">Hui Yu, University of Glasgow, UK  </h5>
+              <h5 class="fs-6">
+                Laurence Yang (Chair), St. Francis Xavier Univ., Canada
+              </h5>
+              <h5 class="fs-6">Hui Yu, University of Glasgow, UK</h5>
               <h5 class="fs-6">Oscar Lin, Athabasca University, Canada</h5>
             </div>
           </div>
@@ -290,6 +306,8 @@ title: IEEE MVS 2025
                     <li>Intellectual Property Rights</li>
                     <li>Virtual Crime and Law Enforcement</li>
                     <li>Content Moderation and Free Speech</li>
+                    <li>Contracts in Metaverse</li>
+                    <li>Liability and Metaverse</li>
                   </ul>
                 </div>
               </div>
@@ -315,6 +333,67 @@ title: IEEE MVS 2025
           </p>
         </div>
       </div>
+    </div>
+  </div>
+</section>
+
+<section
+  class="page-section container-fluid px-5 pt-5 pb-5 mt-2 d-flex flex-column gap-4"
+>
+  <div class="row text-center">
+    <div class="col-12"><h2 class="fs-2 mb-2">Organizing Committee</h2></div>
+  </div>
+
+  <div class="row text-center justify-content-center g-4">
+    <div class="col-md-3">
+      <img
+        src="/assets/images/Oscar_Lin.jpg"
+        alt="Dr. Oscar Lin"
+        class="circle-img mb-3"
+      />
+      <h5>Dr. Oscar Lin</h5>
+      <h6><i>Athabasca University, Canada</i></h6>
+      <p>General Executive Chair</p>
+    </div>
+    <div class="col-md-3">
+      <img
+        src="/assets/images/metaverse/georg_borges.jpg"
+        alt="Dr. Henry Leung"
+        class="circle-img mb-3"
+      />
+      <h5>Dr. Georg Borges</h5>
+      <h6><i>Saarland University, Germany</i></h6>
+      <p>General Chair</p>
+    </div>
+    <div class="col-md-3">
+      <img
+        src="/assets/images/metaverse/mohammed_ghazal.jpg"
+        alt="Dr. Steve Drew"
+        class="circle-img mb-3"
+      />
+      <h5>Mohammed Ghazal</h5>
+      <h6><i>Abu Dhabi University, UAE</i></h6>
+      <p>General Chair</p>
+    </div>
+    <div class="col-md-3">
+      <img
+        src="/assets/images/metaverse/azza_basiouni.jpg"
+        alt="Dr. Oscar Lin"
+        class="circle-img mb-3"
+      />
+      <h5>Dr. Azza Basiouni</h5>
+      <h6><i>Liwa College, UAE</i></h6>
+      <p>Program Chair</p>
+    </div>
+    <div class="col-md-3">
+      <img
+        src="/assets/images/metaverse/junhui_hou.jpg"
+        alt="Dr. Steve Drew"
+        class="circle-img mb-3"
+      />
+      <h5>Dr. Junhui Hou</h5>
+      <h6><i>City University of Hong Kong, Hongkong, China</i></h6>
+      <p>Program Chair</p>
     </div>
   </div>
 </section>
@@ -406,11 +485,11 @@ title: IEEE MVS 2025
   <h2 class="fs-2 text-center">Supporters</h2>
   <div class="row justify-content-around gap-3 pb-5">
     <div
-    class="col-12 col-md-auto d-flex justify-content-center"
-    style="height: 50px"
-  >
-    <img src="/assets/images/tcsc_ieee.png" class="mh-100" />
-  </div>
+      class="col-12 col-md-auto d-flex justify-content-center"
+      style="height: 50px"
+    >
+      <img src="/assets/images/tcsc_ieee.png" class="mh-100" />
+    </div>
     <div
       class="col-12 col-md-auto d-flex justify-content-center"
       style="height: 50px"
@@ -418,10 +497,10 @@ title: IEEE MVS 2025
       <img src="/assets/images/ieee_cybermatics.png" class="mh-100" />
     </div>
     <div
-    class="col-12 col-md-auto d-flex justify-content-center"
-    style="height: 50px"
-  >
-    <img src="/assets/images/SWTC2.png" class="mh-100" />
-  </div>
+      class="col-12 col-md-auto d-flex justify-content-center"
+      style="height: 50px"
+    >
+      <img src="/assets/images/SWTC2.png" class="mh-100" />
+    </div>
   </div>
 </section>
