Fix spelling in Metaverse conference

--- a/metaverse/index.html
+++ b/metaverse/index.html
@@ -108,7 +108,7 @@ title: IEEE MVS 2025
             <div class="d-flex flex-column">
               <h5 class="fs-6">Azza Basiouni, Liwa College, UAE</h5>
               <h5 class="fs-6">
-                Junhui Hou, City University of Hong Kong, Hongkong, China
+                Junhui Hou, City University of Hong Kong, Hong Kong, China
               </h5>
               <h5 class="fs-6">
                 Francesco Pupo, The University of Calabria, Italy
@@ -392,7 +392,7 @@ title: IEEE MVS 2025
         class="circle-img mb-3"
       />
       <h5>Dr. Junhui Hou</h5>
-      <h6><i>City University of Hong Kong, Hongkong, China</i></h6>
+      <h6><i>City University of Hong Kong, Hong Kong, China</i></h6>
       <p>Program Chair</p>
     </div>
   </div>
