--- a/metaverse/index.html
+++ b/metaverse/index.html
@@ -345,16 +345,7 @@ title: IEEE MVS 2025
   </div>
 
   <div class="row text-center justify-content-center g-4">
-    <div class="col-md-3">
-      <img
-        src="/assets/images/Oscar_Lin.jpg"
-        alt="Dr. Oscar Lin"
-        class="circle-img mb-3"
-      />
-      <h5>Dr. Oscar Lin</h5>
-      <h6><i>Athabasca University, Canada</i></h6>
-      <p>General Executive Chair</p>
-    </div>
+    
     <div class="col-md-3">
       <img
         src="/assets/images/metaverse/georg_borges.jpg"
@@ -368,17 +359,28 @@ title: IEEE MVS 2025
     <div class="col-md-3">
       <img
         src="/assets/images/metaverse/mohammed_ghazal.jpg"
-        alt="Dr. Steve Drew"
+        alt="Dr. Mohammed"
         class="circle-img mb-3"
       />
       <h5>Mohammed Ghazal</h5>
       <h6><i>Abu Dhabi University, UAE</i></h6>
       <p>General Chair</p>
     </div>
+
+    <div class="col-md-3">
+      <img
+        src="/assets/images/Oscar_Lin.jpg"
+        alt="Dr. Oscar Lin"
+        class="circle-img mb-3"
+      />
+      <h5>Dr. Oscar Lin</h5>
+      <h6><i>Athabasca University, Canada</i></h6>
+      <p>General Executive Chair</p>
+    </div>
     <div class="col-md-3">
       <img
         src="/assets/images/metaverse/azza_basiouni.jpg"
-        alt="Dr. Oscar Lin"
+        alt="Dr Azza"
         class="circle-img mb-3"
       />
       <h5>Dr. Azza Basiouni</h5>
@@ -388,7 +390,7 @@ title: IEEE MVS 2025
     <div class="col-md-3">
       <img
         src="/assets/images/metaverse/junhui_hou.jpg"
-        alt="Dr. Steve Drew"
+        alt="Dr. Hou"
         class="circle-img mb-3"
       />
       <h5>Dr. Junhui Hou</h5>
