--- a/metaverse/index.html
+++ b/metaverse/index.html
@@ -356,6 +356,21 @@ title: IEEE MVS 2025
       <h6><i>Saarland University, Germany</i></h6>
       <p>General Chair</p>
     </div>
+
+
+    <div class="col-md-3">
+      <img
+        src="/assets/images/metaverse/qing_li.jpg"
+        alt="Dr. Qing Li"
+        class="circle-img mb-3"
+      />
+      <h5>Dr. Qing Li</h5>
+      <h6><i>The Hong Kong Polytechnic University, Hong Kong, China </i></h6>
+      <p>General Chair</p>
+    </div>
+
+
+    
     <div class="col-md-3">
       <img
         src="/assets/images/metaverse/mohammed_ghazal.jpg"
