--- a/uic/index.html
+++ b/uic/index.html
@@ -65,7 +65,7 @@ title: IEEE UIC 2025
           <h4 class="fs-5 fw-bold">Organizing Committee</h4>
           <hr class="w-100" />
           <div class="d-flex gap-1 flex-column">
-            <h5 class="fs-6 fw-bold">General Chair</h5>
+            <h5 class="fs-6 fw-bold">General Chairs</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
                 Bin Hu, Beijing Institute of Technology, China
