--- a/index.html
+++ b/index.html
@@ -155,6 +155,8 @@ title: Home
       <h6><i>Athabasca University, Canada</i></h6>
       <p>Financial Chair</p>
     </div>
+
+    
     <div class="col-md-4">
       <img
         src="/assets/images/Xueqin Liang.JPG"
@@ -165,6 +167,42 @@ title: Home
       <h6><i>Xidian University, China</i></h6>
       <p>Publication Chair</p>
     </div>
+
+ <div class="col-md-4">
+      <img
+        src="/assets/images/saher.JPG"
+        alt="Dr. "
+        class="circle-img mb-3"
+      />
+      <h5>Dr. Saher Javaid</h5>
+      <h6><i>The University of Calgary, Canada</i></h6>
+      <p>Women in Engineering Chair</p>
+    </div>
+
+     <div class="col-md-4">
+      <img
+        src="/assets/images/ye.JPG"
+        alt="Dr. John Ye"
+        class="circle-img mb-3"
+      />
+      <h5>Dr. Qiang Ye</h5>
+      <h6><i>The University of Calgary, Canada</i></h6>
+      <p>Special Session Chair</p>
+    </div>
+
+    <div class="col-md-4">
+      <img
+        src="/assets/images/raymond.PNG"
+        alt="Raymond Morland"
+        class="circle-img mb-3"
+      />
+      <h5>Raymond Morland</h5>
+      <h6><i>Athabasca University, Canada</i></h6>
+      <p>Web Chair</p>
+    </div>
+ 
+
+    
   </div>
 </section>
 
