--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ title: Home
 
  <div class="col-md-4">
       <img
-        src="/assets/images/saher.JPG"
+        src="/assets/images/saher.jpg"
         alt="Dr. "
         class="circle-img mb-3"
       />
@@ -181,7 +181,7 @@ title: Home
 
      <div class="col-md-4">
       <img
-        src="/assets/images/ye.JPG"
+        src="/assets/images/ye.jpg"
         alt="Dr. John Ye"
         class="circle-img mb-3"
       />
@@ -192,7 +192,7 @@ title: Home
 
     <div class="col-md-4">
       <img
-        src="/assets/images/raymond.PNG"
+        src="/assets/images/raymond.png"
         alt="Raymond Morland"
         class="circle-img mb-3"
       />
