--- a/index.html
+++ b/index.html
@@ -190,6 +190,20 @@ title: Home
       <p>Special Session Chair</p>
     </div>
 
+
+   <div class="col-md-4">
+      <img
+        src="/assets/images/aris.jpg"
+        alt="Dr. Aris"
+        class="circle-img mb-3"
+      />
+      <h5>Dr. Aris Leivadeas</h5>
+      <h6><i>TÉcole de technologie supérieure, Canada</i></h6>
+      <p>Publicity Chair</p>
+    </div>
+
+
+    
     <div class="col-md-4">
       <img
         src="/assets/images/raymond.png"
