--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ title: Home
         class="circle-img mb-3"
       />
       <h5>Dr. Henry Leung</h5>
-      <h6><i>University of Calgary, Canada</i></h6>
+      <h6><i>The University of Calgary, Canada</i></h6>
       <p>General Chair</p>
     </div>
     <div class="col-md-4">
@@ -142,7 +142,7 @@ title: Home
         class="circle-img mb-3"
       />
       <h5>Dr. Steve Drew</h5>
-      <h6><i>University of Calgary, Canada</i></h6>
+      <h6><i>The University of Calgary, Canada</i></h6>
       <p>Financial Chair</p>
     </div>
     <div class="col-md-4">
@@ -153,7 +153,7 @@ title: Home
       />
       <h5>Hongxin Yan</h5>
       <h6><i>Athabasca University, Canada</i></h6>
-      <p>Financial Chair</p>
+      <p>Co-Financial Chair</p>
     </div>
 
     
