--- a/metaverse/index.html
+++ b/metaverse/index.html
@@ -176,6 +176,11 @@ title: IEEE MVS 2025
                 Francesco Pupo, The University of Calabria, Italy
               </h5>
               <h5 class="fs-6">Mohammed Ghazal, Abu Dhabi University, UAE</h5>
+
+ <h5 class="fs-6">Dr. Walaa Saber Ismail, Liwa College, UAE</h5> 
+<h5 class="fs-6">Dr. Suha Khalil Assayed, British University in Dubai, UAE</h5>
+
+              
             </div>
           </div>
           <hr class="w-100" />
