--- a/metaverse/index.html
+++ b/metaverse/index.html
@@ -417,6 +417,19 @@ title: IEEE MVS 2025
       <h6><i>City University of Hong Kong, Hong Kong, China</i></h6>
       <p>Program Chair</p>
     </div>
+
+<div class="col-md-3">
+      <img
+        src="/assets/images/metaverse/kim.jpg"
+        alt="Dr. Kim"
+        class="circle-img mb-3"
+      />
+      <h5>Dr. Kangsoo Kim</h5>
+      <h6><i>The University of Calgary, Canada</i></h6>
+      <p>Publicity Chair</p>
+    </div>
+    
+    
   </div>
 </section>
 
