--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@ title: Home
         <h3>Calgary, Alberta, Canada</h3>
         <h3 class="">August 18 - 22, 2025</h3>
       </div>
+      <div>
+        <a href="/cfp" class="btn btn-primary w-100"
+          >Call for Papers and Proposals</a
+        >
+      </div>
     </div>
   </div>
 </section>
@@ -378,18 +383,6 @@ title: Home
             <h3 class="text-center">IEEE ATC 2025</h3>
             <h5 class="fs-6 text-center">
               The 22nd IEEE Autonomous and Trusted Vehicle Conference
-            </h5>
-            <a href="#" class="btn btn-primary disabled w-100">Coming Soon</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card bg-light-subtle">
-          <div class="card-body d-flex flex-column gap-4">
-            <h3 class="text-center">IEEE PCDS 2025</h3>
-            <h5 class="fs-6 text-center">
-              The 11th IEEE International Conference on Privacy Computing and
-              Data Security
             </h5>
             <a href="#" class="btn btn-primary disabled w-100">Coming Soon</a>
           </div>
