--- a/uic/index.html
+++ b/uic/index.html
@@ -70,9 +70,7 @@ title: IEEE UIC 2025
               <h5 class="fs-6">
                 Bin Hu, Beijing Institute of Technology, China
               </h5>
-              <h5 class="fs-6">
-                H. Herbert Song, University of Maryland, USA
-              </h5>
+              <h5 class="fs-6">H. Herbert Song, University of Maryland, USA</h5>
             </div>
           </div>
           <hr class="w-100" />
@@ -336,18 +334,6 @@ title: IEEE UIC 2025
             <h3 class="text-center">IEEE ATC 2025</h3>
             <h5 class="fs-6 text-center">
               The 22nd IEEE Autonomous and Trusted Vehicle Conference
-            </h5>
-            <a href="#" class="btn btn-primary disabled w-100">Coming Soon</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card bg-light-subtle">
-          <div class="card-body d-flex flex-column gap-4">
-            <h3 class="text-center">IEEE PCDS 2025</h3>
-            <h5 class="fs-6 text-center">
-              The 11th IEEE International Conference on Privacy Computing and
-              Data Security
             </h5>
             <a href="#" class="btn btn-primary disabled w-100">Coming Soon</a>
           </div>
