--- a/index.html
+++ b/index.html
@@ -260,7 +260,17 @@ title: Home
     </div>
  
 
-
+<div class="col-md-4">
+      <img
+        src="/assets/images/abbas.jpg"
+        alt="abbas"
+        class="circle-img mb-3"
+      />
+      <h5>Dr Abbas Mahbod</h5>
+      <h6><i>University of Calgary, Canada</i></h6>
+      <p>Local Chair</p>
+    </div>
+ 
     
     
   </div>
