Updated digital twin organizing committee

--- a/digitaltwin/index.html
+++ b/digitaltwin/index.html
@@ -81,8 +81,12 @@ title: IEEE Digital Twin 2025
             <div class="d-flex flex-column">
               <h5 class="fs-6">Zumin Wang, Dalian University, China</h5>
               <h5 class="fs-6">
+                Ljiljana Trajkovic, Simon Fraser University, Canada
+              </h5>
+              <h5 class="fs-6">
                 Tahar Kechadi, University College Dublin, Ireland
               </h5>
+              <h5 class="fs-6">A. El Saddik, University of Ottawa, Canada</h5>
             </div>
           </div>
           <hr class="w-100" />
@@ -91,10 +95,10 @@ title: IEEE Digital Twin 2025
             <div class="d-flex flex-column">
               <h5 class="fs-6">Tao Zhu, University of South China, China</h5>
               <h5 class="fs-6">Jing Qin, Dalian University, China</h5>
-              <h5 class="fs-6">Pengfei Hu, Holisys Ltd. China</h5>
               <h5 class="fs-6">
                 Nyo Thiri Aung, University College Dublin, Ireland
               </h5>
+              <h5 class="fs-6">Pengfei Hu, Holisys Ltd. China</h5>
             </div>
           </div>
           <hr class="w-100" />
@@ -121,6 +125,7 @@ title: IEEE Digital Twin 2025
             <h5 class="fs-6 fw-bold">Workshop Chairs</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">Lu Liu, University of Exeter, UK</h5>
+              <h5 class="fs-6">Khawla Alhasan, Arab Open University, Kuwait</h5>
             </div>
           </div>
           <hr class="w-100" />
@@ -128,7 +133,19 @@ title: IEEE Digital Twin 2025
             <h5 class="fs-6 fw-bold">Special Issue Chairs</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
+                Jascha Grübel, Wageningen Uni. & Res, Netherlands
+              </h5>
+              <h5 class="fs-6">
                 Pengcheng Zhao, University of South China, China
+              </h5>
+            </div>
+          </div>
+          <hr class="w-100" />
+          <div class="d-flex gap-1 flex-column">
+            <h5 class="fs-6 fw-bold">Web Chair</h5>
+            <div class="d-flex flex-column">
+              <h5 class="fs-6">
+                Raymond Morland, Athabasca University, Canada
               </h5>
             </div>
           </div>
@@ -138,6 +155,7 @@ title: IEEE Digital Twin 2025
             <div class="d-flex flex-column">
               <h5 class="fs-6">Lan Huang, Jilin University, China</h5>
               <h5 class="fs-6">Oscar Lin，Athabasca University，Canada</h5>
+              <h5 class="fs-6">Andreas Holzinger, BOKU, Austria</h5>
             </div>
           </div>
           <hr class="w-100" />
