--- a/metaverse/index.html
+++ b/metaverse/index.html
@@ -342,6 +342,27 @@ title: IEEE MVS 2025
 <section
   class="page-section container-fluid px-5 pt-5 pb-5 mt-2 d-flex flex-column gap-4"
 >
+
+  <div class="row text-center">
+    <div class="col-12"><h2 class="fs-2 mb-2">Honorary Chair</h2></div>
+  </div>
+
+<div class="row text-center justify-content-center g-4">
+    
+    <div class="col-md-3">
+      <img
+        src="/assets/images/metaverse/g.jpg"
+        alt="Dr. Giancarlo Fortino"
+        class="circle-img mb-3"
+      />
+      <h5>Dr. Giancarlo Fortino</h5>
+      <h6><i>The University of Calabria, Italy</i></h6>
+      <p>Honorary Chair</p>
+    </div>
+  
+</div>
+
+  
   <div class="row text-center">
     <div class="col-12"><h2 class="fs-2 mb-2">Organizing Committee</h2></div>
   </div>
