--- a/metaverse/index.html
+++ b/metaverse/index.html
@@ -425,6 +425,7 @@ title: IEEE MVS 2025
       <h6><i>Liwa College, UAE</i></h6>
       <p>Program Chair</p>
     </div>
+    
     <div class="col-md-3">
       <img
         src="/assets/images/metaverse/junhui_hou.jpg"
@@ -433,9 +434,21 @@ title: IEEE MVS 2025
       />
       <h5>Dr. Junhui Hou</h5>
       <h6><i>City University of Hong Kong, Hong Kong, China</i></h6>
-      <p>Program Chair</p>
+      <p>co-Program Chair</p>
     </div>
 
+<div class="col-md-3">
+      <img
+        src="/assets/images/metaverse/francesco.jpg"
+        alt="Dr. Pupo"
+        class="circle-img mb-3"
+      />
+      <h5>Dr. Francesco Pupo</h5>
+      <h6><i>The University of Calabria, Italy</i></h6>
+      <p>co-Program Chair</p>
+    </div>
+
+    
 <div class="col-md-3">
       <img
         src="/assets/images/metaverse/kim.jpg"
