--- a/metaverse/index.html
+++ b/metaverse/index.html
@@ -333,6 +333,20 @@ title: IEEE MVS 2025
             for fast-track publication in special issues of some prestigious
             journals, e.g. Computers and Education: X-reality (CEXR)
           </p>
+          <p> 
+          Manuscript Preparation: <br> 
+         Regular papers should be limited to 4-8 pages. 
+            <br> Workshop and Special Session papers should be between 2 and 6 pages. 
+            <br> Work-in-Progress (WiP) papers should be between 2 and 4 pages. 
+            <br> Late Breaking Innovation (LBI) papers should be limited to 2-10 pages.
+            <br> All manuscripts should be formatted in the IEEE Computer Society Proceedings Format, and submitted in the Portable Document Format (.pdf).
+            <br> A submission can have at most 2 additional pages with the pages overlength charge if accepted.
+       Submission:  <br> 
+            All types of papers, including regular, workshop, special session, WiP and Late Breaking Innovation (LBI) papers should be submitted via the conferences’ EDAS system. 
+            Authors should register with the EDAS system first, and then make the submission via the conference link <a href="https://edas.info/newPaper.php?c=33583"> EDAS </a>. Make sure you select the right conference, track, workshop or forums for your paper.
+
+          </p>
+          
         </div>
       </div>
     </div>
