--- a/metaverse/index.html
+++ b/metaverse/index.html
@@ -496,7 +496,7 @@ title: IEEE MVS 2025
 
     <div class="col-md-3">
       <img
-        src="/assets/images/metaverse/laurence.jpg"
+        src="/assets/images/metaverse/laurence.jpeg"
         alt="Dr. Yang"
         class="circle-img mb-3"
       />
