--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ title: Home
 
     <div class="col-md-3">
       <img
-        src="/assets/images/metaverse/laurence.jpg"
+        src="/assets/images/metaverse/laurence.jpeg"
         alt="Dr. Yang"
         class="circle-img mb-3"
       />
