--- a/metaverse/index.html
+++ b/metaverse/index.html
@@ -137,9 +137,9 @@ title: IEEE MVS 2025
             <h5 class="fs-6 fw-bold">International Advisory Committee</h5>
             <div class="d-flex flex-column">
               <h5 class="fs-6">
-                Khaled Shaalan, The British University in Dubai, UAE
-              </h5>
+                Khaled Shaalan, The British University in Dubai, UAE</h5>
               <h5 class="fs-6">Zhong Chen, Peking University, China</h5>
+              <h5 class="fs-6">Shengfeng Qin, Northumbria University, UK </h5>
             </div>
           </div>
           <hr class="w-100" />
