--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ title: Home
         class="circle-img mb-3"
       />
       <h5>Dr. Laurence Yang</h5>
-      <h6><i>St. Francis Xavier University, Japan</i></h6>
+      <h6><i>St. Francis Xavier University, Canada</i></h6>
       <p>Steering Committee  Chair</p>
     </div>
 
