--- a/metaverse/index.html
+++ b/metaverse/index.html
@@ -501,7 +501,7 @@ title: IEEE MVS 2025
         class="circle-img mb-3"
       />
       <h5>Dr. Laurence Yang</h5>
-      <h6><i>St. Francis Xavier University, Japan</i></h6>
+      <h6><i>St. Francis Xavier University, Canada</i></h6>
       <p>Steering Committee  Chair</p>
     </div>
 
