Adding paper submission links

--- a/digitaltwin/index.html
+++ b/digitaltwin/index.html
@@ -20,7 +20,7 @@ title: IEEE Digital Twin 2025
       class="page-section container px-5 pt-5 d-flex flex-column align-items-center gap-3"
     >
       <h1 class="display-5 fw-bolder mt-5">
-        2025 IEEE Digital Twin Conference
+        The 2025 IEEE International Conference on Digital Twin
       </h1>
       <!-- <h3 class="w-75 responsive-width fw-medium text-center">
         Convergence of Minds: Forging Human-AI Partnerships Across Disciplines
@@ -177,7 +177,7 @@ title: IEEE Digital Twin 2025
     <div class="col-sm-8 d-flex flex-column gap-4">
       <div>
         <h2 class="fs-2 mb-2">
-          Join us at the 2025 IEEE Digital Twin Conference
+          Join us at the 2025 IEEE International Conference on Digital Twin
         </h2>
         <p class="fs-5">
           Digital twin, as a recent iconic phrases of fashions, has been coined
@@ -287,8 +287,7 @@ title: IEEE Digital Twin 2025
         <div class="col-sm-12 d-flex flex-column gap-3 justify-content-around">
           <h3 class="">Digital Twin 2025 Paper Publication</h3>
           <p class="fs-5">
-            All types of papers must be submitted via the EDAS system from the
-            2025 congress website. Regular, Workshop and Forum papers are
+            All types of papers must be submitted via the EDAS system at this link <a href="https://edas.info/N33584">https://edas.info/N33584</a>. Regular, Workshop and Forum papers are
             limited to 8, 6 and 3 pages respectively. All accepted papers will
             be published by IEEE (IEEE-DL and EI indexed) in the Smart World
             Congress Proceedings. Best Paper Awards will be presented to high
