--- a/uic/index.html
+++ b/uic/index.html
@@ -268,19 +268,24 @@ title: IEEE UIC 2025
         <div class="col-sm-12 d-flex flex-column gap-3 justify-content-around">
           <h3 class="">Paper Submission</h3>
           <p class="fs-5">
-            Main conference papers are limited to 8–10 pages (regular full
-            paper) or 6–8 pages (full paper) and 2–4 pages (poster paper)
-            following the IEEE proceedings format and are to be submitted as PDF
-            via the site: Coming soon.
+            All papers need to be submitted electronically through the
+            conterence submission website (EDAS) in PDF format at
+            <a href="https://edas.info/N33589">https://edas.info/N33589</a>.
+            Each paper is limited to 8 pages (or 10 pages with over-length
+            charge) for a regular full paper, 6 pages (or 8 pages with
+            over-length charge) for a full paper including figures and
+            references using the IEEE Computer Society Proceedings manuscripts
+            style.
           </p>
           <h3 class="">Paper Publication</h3>
           <p class="fs-5">
-            Accepted conference papers will be published by IEEE (IEEE-DL and EI
-            indexed). At least one author of each accepted paper is required to
-            register and present their work at the conference; otherwise, the
-            paper will not be included in the proceedings. Selected papers,
-            after further extensions and revisions, will be recommended to
-            special issues. More details at the conference website: Coming soon.
+            Papers accepted by IEEE UIC 2025 conference will be published by the
+            IEEE Computer Society Press. At least one author of each accepted
+            paper is required to register and present their work at the
+            conference; otherwise, the paper will not be included in the
+            proceedings. All accepted papers will be submitted to IEEE Xplore
+            and EI. Distinguished papers presented at the conference, after
+            further revision, will be invited for submission to a special issue
           </p>
         </div>
       </div>
