Fixed metaverse page

--- a/metaverse/index.html
+++ b/metaverse/index.html
@@ -329,16 +329,16 @@ title: IEEE MVS 2025
           <h3 class="">Submission & Publication</h3>
           <p class="fs-5">
             Authors are invited to submit their original research work using
-            IEEE CS Proceedings format via Metaverse website (to be opened
-            soon). Regular paper (8 pages), Work-in Progress (WiP) paper (4~6
-            pages), Demo/Poster paper (2~4 pages), Workshop & Special Session
-            paper (6 pages) are solicited. Detailed instructions are on the
-            website. Accepted papers will be included into the proceedings
-            published by IEEE CPS (EI indexed). At least one author of any
-            accepted paper is required to register and present the paper at the
-            conference. Extended versions of selected papers will be considered
-            for fast-track publication in special issues of some prestigious
-            journals, e.g. Computers and Education: X-reality (CEXR)
+            IEEE CS Proceedings format via Metaverse website. Regular paper (8
+            pages), Work-in Progress (WiP) paper (4~6 pages), Demo/Poster paper
+            (2~4 pages), Workshop & Special Session paper (6 pages) are
+            solicited. Detailed instructions are on the website. Accepted papers
+            will be included into the proceedings published by IEEE CPS (EI
+            indexed). At least one author of any accepted paper is required to
+            register and present the paper at the conference. Extended versions
+            of selected papers will be considered for fast-track publication in
+            special issues of some prestigious journals, e.g. Computers and
+            Education: X-reality (CEXR)
           </p>
           <h4>Manuscript Preparation</h4>
           <ul class="fs-5 m-0">
