--- a/cfp/index.html
+++ b/cfp/index.html
@@ -314,8 +314,8 @@ title: IEEE SWC 2025 CFP
       Submit your proposal as a Word file to the special session /workshop chair
       Dr. Qiang Ye at (<a href="mailto:qiang.ye@ucalgary.ca"
         >qiang.ye@ucalgary.ca</a
-      >) by Feb. 15, 2025 and the decision on Acceptance will be notified by
-      March 7, 2025.
+      >) by March 1, 2025 and the decision on Acceptance will be notified by
+      March 15, 2025.
     </p>
     <h3 class="">
       IEEE SWC 2025 Special Sessions and Workshops Information and
