--- a/index.html
+++ b/index.html
@@ -140,6 +140,20 @@ title: Home
       <h6><i>Malmö University, Sweden</i></h6>
       <p>Program Chair</p>
     </div>
+
+       <div class="col-md-4">
+      <img
+        src="/assets/images/man.jpeg"
+        alt="Dr. Man Lin"
+        class="circle-img mb-3"
+      />
+      <h5>Dr. Man Lin</h5>
+      <h6><i>St. Francis Xavier University, Canada</i></h6>
+      <p>Panel Chair</p>
+    </div>
+
+
+    
     <div class="col-md-4">
       <img
         src="/assets/images/steve-drew-small.jpg"
