--- a/index.html
+++ b/index.html
@@ -187,6 +187,16 @@ title: Home
       <p>Publication Chair</p>
     </div>
 
+ <div class="col-md-4">
+      <img
+        src="/assets/images/carson.JPG"
+        alt="Dr. Carson Leung"
+        class="circle-img mb-3"
+      />
+      <h5>Dr. Carson Leung</h5>
+      <h6><i>University of Manitoba, China</i></h6>
+      <p>Publication Chair</p>
+    </div>
 
 
 
@@ -226,6 +236,21 @@ title: Home
       <p>Publicity Chair</p>
     </div>
 
+
+ <div class="col-md-4">
+      <img
+        src="/assets/images/ross.jpg"
+        alt="Dr. Rossitza"
+        class="circle-img mb-3"
+      />
+      <h5>Dr. Rossitza S. Marinova</h5>
+      <h6><i>Concordia University of Edmonton, Canada</i></h6>
+      <p>Publicity Chair</p>
+    </div>
+
+
+
+    
   <div class="col-md-4">
       <img
         src="/assets/images/ashiq.jpg"
