--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ title: Home
 
  <div class="col-md-4">
       <img
-        src="/assets/images/carson.JPG"
+        src="/assets/images/carson.png"
         alt="Dr. Carson Leung"
         class="circle-img mb-3"
       />
