--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ title: Home
         class="circle-img mb-3"
       />
       <h5>Dr. Carson Leung</h5>
-      <h6><i>University of Manitoba, China</i></h6>
+      <h6><i>University of Manitoba, Canada</i></h6>
       <p>Publication Chair</p>
     </div>
 
