--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ title: Home
       />
       <h5>Dr. Rossitza S. Marinova</h5>
       <h6><i>Concordia University of Edmonton, Canada</i></h6>
-      <p>Publicity Chair</p>
+      <p>Local Chair</p>
     </div>
 
 
