Added ATC conference

--- a/digitaltwin/index.html
+++ b/digitaltwin/index.html
@@ -357,7 +357,7 @@ title: IEEE Digital Twin 2025
             <h5 class="fs-6 text-center">
               The 22nd IEEE Autonomous and Trusted Vehicle Conference
             </h5>
-            <a href="#" class="btn btn-primary disabled w-100">Coming Soon</a>
+            <a href="/atc" class="btn btn-primary w-100">View</a>
           </div>
         </div>
       </div>
