--- a/cfp/index.html
+++ b/cfp/index.html
@@ -225,7 +225,7 @@ title: IEEE SWC 2025 CFP
             <h5 class="fs-6 text-center">
               The 22nd IEEE Autonomous and Trusted Vehicle Conference
             </h5>
-            <a href="#" class="btn btn-primary disabled w-100">Coming Soon</a>
+            <a href="/atc" class="btn btn-primary w-100">View</a>
           </div>
         </div>
       </div>
