--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@ title: Home
             <h5 class="fs-6 text-center">
               The 22nd IEEE Autonomous and Trusted Vehicle Conference
             </h5>
-            <a href="#" class="btn btn-primary disabled w-100">Coming Soon</a>
+            <a href="#" class="btn btn-primary w-100">View</a>
           </div>
         </div>
       </div>
