Fixed link to ATC on home page

--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@ title: Home
             <h5 class="fs-6 text-center">
               The 22nd IEEE Autonomous and Trusted Vehicle Conference
             </h5>
-            <a href="#" class="btn btn-primary w-100">View</a>
+            <a href="/atc" class="btn btn-primary w-100">View</a>
           </div>
         </div>
       </div>
