Made edits to ATC conference page

--- a/atc/index.html
+++ b/atc/index.html
@@ -27,7 +27,7 @@ title: IEEE UIC 2025
                 <h3 class="">August 18 - 22, 2025</h3>
             </div>
             <div>
-                <a class="disabled btn btn-primary fw-bolder" href="#"
+                <a class="btn btn-primary fw-bolder" href="https://edas.info/index.php?c=33649"
                 >Submit Paper to ATC 2025</a
                 >
             </div>
@@ -155,7 +155,7 @@ title: IEEE UIC 2025
                                 Victor C. M. Leung, Shenzhen MSU-BIT University, China
                             </h5>
                             <h5 class="fs-6">
-                                Sonia Heemstra de Groot Dutch, Eindhoven University of Technology, Netherlands
+                                Sonia Heemstra de Groot, Eindhoven University of Technology, Netherlands
                             </h5>
                             <h5 class="fs-6">Jun Zhao, Dalian University of Technology, China</h5>
                         </div>
@@ -285,7 +285,7 @@ title: IEEE UIC 2025
                         further revision, will be invited for submission to a special issue
                     </p>
                     <div>
-                        <a class="btn btn-primary disabled fw-bolder" href="#"
+                        <a class="btn btn-primary fw-bolder" href="https://edas.info/index.php?c=33649"
                         >Submit Paper to ATC 2025</a
                         >
                     </div>
