--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ title: Home
 
     <div class="col-md-4">
       <img
-        src="/assets/images/hongxin.jpg"
+        src="/assets/images/hongxin.JPG"
         alt="Dr. Steve Drew"
         class="circle-img mb-3"
       />
